# SlicerPcatMeasure

./: .gitignore  Acknowledgements.md  CMakeLists.txt  LICENSE.txt  PcatMeasureExtension.s4ext  README.md
CoronaryCenterlineCrossSection/: CMakeLists.txt  CoronaryCenterlineCrossSection.py
PcatMeasure/: CMakeLists.txt  PcatMeasure.py
PcatMeasure/backup/: CCCS_backup.py  PcatMeasure_backup.py
PcatMeasure/backup/VMTK-based-Centerline-Extraction-main/: centerline_extraction_slicer2.py
PcatMeasure/backup/preprocess/: separate_coronary_seg2RL.py  syuusei.py
PcatMeasure/manual/: README_ja.txt  pcat_measure_manual_ver1_eng.pptx  pcat_measure_manual_ver1_ja.pptx
PcatMeasure/utils/: Pcat_measure_backup_20260109.py  __init__.py  branch.py  cal_seg_artery.py  cal_startpoint.py  create_curved_cylinder_mask.py  extract_centerline_logic.py  getCTvaluesFromSegmentation.py  onLoadSegmentation2.py  pointvieew.py  save_overlay.py  save_poly.py
